# chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md
api/: .gitignore  Makefile  Pipfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
api/alembic/: README  env.py  script.py.mako
api/alembic/versions/: 74c5c8d4b8a4_init_db.py
api/chatbot/: __init__.py  agent.py  callbacks.py  chains.py  config.py  context.py  dependencies.py  embeddings.py  exception_handlers.py  history.py  http_client.py  lifespan.py  llm_providers.py  main.py  memory.py  models.py  routers.py  safety.py  schemas.py  settings.py  state.py  staticfiles.py  summarization.py  utils.py  vectorstore.py
api/chatbot/agent/: __init__.py  smry.py  token_management.py  toolpicker.py
api/chatbot/callbacks/: __init__.py  conversation.py  streaming.py  tracing.py
api/chatbot/chains/: __init__.py  conversation.py  summarization.py
api/chatbot/dependencies/: __init__.py  agent.py  auth.py  commons.py  db.py  s3.py
api/chatbot/embeddings/: __init__.py  huggingface.py
api/chatbot/hippocampus/: manager.py  store.py
api/chatbot/llm/: client.py  providers.py
api/chatbot/llm_client/: __init__.py  base.py  factory.py  github.py  llamacpp.py  tgi.py  vllm.py
api/chatbot/memory/: __init__.py  history.py  long.py  redis.py  short.py
api/chatbot/metrics/: __init__.py  db.py  llm.py
api/chatbot/prompts/: __init__.py  baichuan.py  base.py  chatglm.py  chatml.py  (+9 more)
api/tests/: test_config.py  test_llm_providers.py  test_memory.py  test_schemas.py  test_utils.py
(+339 files in other folders)
