[project]
name = "chatbot"
version = "0.1.0"
description = "A chatbot application with FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.11.14,<4.0.0",
    "aiohttp-client-cache>=0.12.4,<1.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "fake-useragent>=2.2.0,<3.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "fastapi-pagination>=0.13.1,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
    "markdownify>=1.1.0,<2.0.0",
    "minio>=7.2.15,<8.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "psycopg>=3.2.1,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "requests-cache>=1.2.1,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.28,<3.0.0",
    "sqlakeyset>=2.0.0,<3.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "uvloop; sys_platform != 'win32'",
    "websockets>=12.0",
]

[dependency-groups]
prod = [
    "psycopg[c]",
]
dev = [
    "alembic",
    "psycopg[binary]",
    "ruff",
    "pre-commit",
]

[tool.uv]
package = false

[tool.ruff]
# Ruff configuration will be read from ruff.toml if it exists

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"